css for playSound.html

--- a/playSound.html
+++ b/playSound.html
@@ -3,12 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Play a sound</title>
-  <style>
-    fieldset {padding: 1rem; margin: 0;}
-    input[type="range"] {width:100%;}
-    button {padding: 1rem; margin: 1rem 1rem 1rem 0;}
-  </style>
-</head>
+  <link rel="stylesheet" href="css/styles.css"></head>
 <body>
   <form>
     <fieldset>
@@ -16,7 +11,7 @@
       <label for="osc1Frequency">
         Frequency:
       </label>
-      <input type="number" id="osc1Frequency" class="frequencyControl" min="20" max="3500" step=".001" value="440">Hz
+      <input type="number" id="osc1Frequency" class="frequencyControl" min="20" max="3500" step=".001" value="440">
     </fieldset>
   </form>
 
