add stopSound functionality, refactor keys

--- a/playSound.html
+++ b/playSound.html
@@ -18,6 +18,8 @@
     </div>
   </div>
 
+  <p>In case of emergency: press the 'esc' key to stop all sounds.</p>
   <script type="module" src="js/keyboard.js"></script>
+
 </body>
 </html>
