refactor js, add majorScale calculator

--- a/playSound.html
+++ b/playSound.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Play notes with your keyboard</title>
+  <title>Keyboards</title>
   <link rel="stylesheet" href="css/styles.css"></head>
 <body>
-  <h1>Play notes with your keyboard</h1>
+  <h1>Play notes with your keyboard: C Major</h1>
 
   <div id="systemTable">
     <div class="grid-container">
@@ -14,12 +14,16 @@
         <button id="S" class="note">S</button>
         <button id="D" class="note">D</button>
         <button id="F" class="note">F</button>
+        <button id="G" class="note">G</button>
+        <button id="H" class="note">H</button>
+        <button id="J" class="note">J</button>
+        <button id="K" class="note">K</button>
       </div>
     </div>
   </div>
 
   <p>In case of emergency: press the 'esc' key to stop all sounds.</p>
-  
+
   <script type="module" src="js/keyboard.js"></script>
 
 </body>
