--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
     <input type="submit" value="Generate System">
   </form>
-  <button id="stopButton">Stop All Sounds</button>
 
   <div id="systemTable"></div>
 
-  <script src="js/main.js" type="module"></script>
+  <script type="module" src="js/main.js"></script>
+
 </body>
 </html>
