--- a/index.html
+++ b/index.html
@@ -9,16 +9,25 @@
   <h1>Musical System Generator</h1>
 
   <form id="systemConfigForm">
+
     <label for="diapasons">Number of Diapasons:</label>
-    <input type="number" id="diapasons" name="diapasons" min="1" required><br><br>
+    <input type="number" id="diapasons" name="diapasons" min="1" required>
 
     <label for="notes">Number of Notes in Diapason:</label>
-    <input type="number" id="notes" name="notes" min="1" required><br><br>
+    <input type="number" id="notes" name="notes" min="1" required>
 
     <label for="rootNote">Root Note Frequency:</label>
-    <input type="number" id="rootNote" name="rootNote" required><br><br>
+    <input type="number" id="rootNote" name="rootNote" required>
 
+    <label for="calculator">System Calculator:</label>
+    <select id="calculator" name="calculator">
+      <option value="equalTemperament">Equal Temperament</option>
+      <option value="majorScale">Major Scale</option>
+      <!-- Add other options as needed -->
+    </select>
+    
     <input type="submit" value="Generate System">
+
   </form>
 
   <div id="systemTable"></div>
