add createKeyMap function

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   </div>
 
   <script type="module" src="js/main.js"></script>
+  <script type="module" src="js/keys/keyboard.js"></script>
 
 </body>
 </html>
