--- a/typeKeyboard.html
+++ b/typeKeyboard.html
@@ -10,21 +10,20 @@
   <div id="systemTable">
     <div class="grid-container">
       <div class="diapason">
-        <button id="A" class="note">A</button>
-        <button id="S" class="note">S</button>
-        <button id="D" class="note">D</button>
-        <button id="F" class="note">F</button>
-        <button id="G" class="note">G</button>
-        <button id="H" class="note">H</button>
-        <button id="J" class="note">J</button>
-        <button id="K" class="note">K</button>
+        <div id="Q" class="note">Q</div>
+        <div id="W" class="note">W</div>
+        <div id="E" class="note">E</div>
+        <div id="R" class="note">R</div>
+        <div id="T" class="note">T</div>
+        <div id="Y" class="note">Y</div>
+        <div id="U" class="note">U</div>
       </div>
     </div>
   </div>
 
   <p>In case of emergency: press the 'esc' key to stop all sounds.</p>
 
-  <script type="module" src="js/keyboard.js"></script>
+  <script type="module" src="js/keys/keyboard.js"></script>
 
 </body>
 </html>
