comments and documentation

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
         <select id="calculator" name="calculator">
           <option value="majorScale" selected>Major Scale - Pythagorean</option>
           <option value="equalTemperament">Equal Temperament</option>
-          <!-- Add other options as needed -->
         </select>
       </div>
 
@@ -43,7 +42,8 @@
   </div>
 
   <script type="module" src="js/main.js"></script>
-  <script type="module" src="js/keys/keyboard.js"></script>
+  <script type="module" src="js/keys/keyboardHandler.js"></script>
+  <script type="module" src="js/keys/escapeKeyHandler.js"></script>
 
 </body>
 </html>
