add input field for a focus area for testing mobile device

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 
     <div id="systemTable"></div>
 
+    <label for "focusTyping">Focus here for keyboard typing:</label>
+    <input type="text">
+
   </div>
 
   <script type="module" src="js/main.js"></script>
