add input field for a focus area for testing mobile device

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 
     <div id="systemTable"></div>
 
-    <label for "focusTyping">Focus here for keyboard typing:</label>
-    <input type="text">
+    <label for="focusTyping">Focus here for keyboard typing:</label>
+    <input type="text" name="focusTyping">
 
   </div>
 
