use numerical keys (0-9) to select a diapason in the musical system

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <div class="formGroup">
         <label for="rootNote">Root Note Frequency:</label>
-        <input type="number" id="rootNote" name="rootNote" min="20" max="20000" value="216" required>
+        <input type="number" id="rootNote" name="rootNote" min="20" max="20000" value="54" required>
       </div>
       <div class="formGroup">
         <label for="notes">Number of Notes in Diapason:</label>
@@ -23,7 +23,7 @@
       </div>
       <div class="formGroup">
         <label for="diapasons">Number of Diapasons:</label>
-        <input type="number" id="diapasons" name="diapasons" min="1" max="10" value="1" required>
+        <input type="number" id="diapasons" name="diapasons" min="1" max="20" value="10" required>
       </div>
       <div class="formGroup">
         <label for="calculator">System Calculator:</label>
@@ -37,10 +37,11 @@
 
     </form>
 
-    <div id="systemTable"></div>
+    <div id="alphaKeyTable"></div>
+    <div id="numericKeyTable"></div>
 
     <label for="focusTyping">Focus here for keyboard typing:</label>
-    <input type="text" name="focusTyping">
+    <input type="text" name="focusTyping" id="focusTyping">
 
   </div>
 
