add root note level to system, select root with numeric keys, select diapason with arrow keys

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <div class="formGroup">
         <label for="rootNote">Root Note Frequency:</label>
-        <input type="number" id="rootNote" name="rootNote" min="20" max="20000" value="54" required>
+        <input type="number" id="rootNote" name="rootNote" min="1" max="15000" value="216" required>
       </div>
       <div class="formGroup">
         <label for="notes">Number of Notes in Diapason:</label>
@@ -23,7 +23,7 @@
       </div>
       <div class="formGroup">
         <label for="diapasons">Number of Diapasons:</label>
-        <input type="number" id="diapasons" name="diapasons" min="1" max="20" value="10" required>
+        <input type="number" id="diapasons" name="diapasons" min="1" max="20" value="3" required>
       </div>
       <div class="formGroup">
         <label for="calculator">System Calculator:</label>
@@ -38,15 +38,16 @@
     </form>
 
     <div id="alphaKeyTable"></div>
-    <div id="numericKeyTable"></div>
 
-    <label for="focusTyping">Focus here for keyboard typing:</label>
-    <input type="text" name="focusTyping" id="focusTyping">
+    <!-- <label for="focusTyping">Focus here for keyboard typing:</label>
+    <input type="text" name="focusTyping" id="focusTyping"> -->
 
   </div>
 
   <script type="module" src="js/main.js"></script>
-  <script type="module" src="js/keys/keyboardHandler.js"></script>
+  <script type="module" src="js/keys/alphaKeyHandler.js"></script>
+  <script type="module" src="js/keys/numericKeyHandler.js"></script>
+  <script type="module" src="js/keys/arrowKeyHandler.js"></script>
   <script type="module" src="js/keys/escapeKeyHandler.js"></script>
 
 </body>
