add minor scale calculator

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       <div class="formGroup">
         <label for="calculator">System Calculator:</label>
         <select id="calculator" name="calculator">
-          <option value="majorScale" selected>Major Scale - Pythagorean</option>
+          <option value="majorScale">Major Scale - Pythagorean</option>
+          <option value="minorScale" selected>Minor Scale - Pythagorean</option>
           <option value="equalTemperament">Equal Temperament</option>
         </select>
       </div>
